# stock-buy-signal

./: .gitignore  .mcp.json  README.md
.github/workflows/: daily-signal.yml
backtest/: README.md
dashboard/: .env.example  README.md  package.json  pnpm-lock.yaml  proxy.ts
dashboard/api-client/: auth-actions.ts
dashboard/api-client/supabase/: client.ts  database.types.ts  middleware.ts  server.ts
dashboard/app/: globals.css  layout.tsx  loading.tsx  manifest.ts  page.tsx
dashboard/app/_actions/: subscription-actions.ts  watchlist-actions.ts
dashboard/app/_components/: subscribe-toggle.tsx  watchlist.tsx
dashboard/app/alerts/: loading.tsx  page.tsx
dashboard/app/login/: page.tsx
dashboard/app/settings/: loading.tsx  page.tsx
dashboard/components/: navigation.tsx  pwa-register.tsx  react-query-client-provider.tsx
dashboard/public/: sw.js
dashboard/src/: proxy.ts
engine/: .env.example  README.md  dispatch.py  e2e_check.py  fetch.py  indicators.py  main.py  notify.py  pyproject.toml  risk.py  sanity_check.py  signals.py  store.py
engine/backtest/: metrics.py  run.py  simulate.py  validate.py
engine/tests/: test_dispatch.py  test_indicators.py  test_risk.py  test_signals.py  test_simulate.py
plans/: architecture.md  buy-signal-alert-spec.md
supabase/migrations/: 20260710145825_init.sql  20260710150217_harden_trigger_function_grants.sql  20260710151041_revoke_rls_auto_enable_execute.sql  20260710173309_subscription_threshold_default_2.sql  20260713140433_public_read_shared.sql  20260715062657_add_spy.sql  20260716024632_add_soxx.sql
(+22 files in other folders)
